[package]
name = "arcs-client"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
chrono = { version = "0.4.37", features = ["serde", "wasmbind"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
urlencoding = "2.1.3"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
futures = "0.3.30"

[dependencies.web-sys]
version = "0.3.69"
features = ["Document", "Element", "HtmlElement", "Node", "Window", "BinaryType", "Blob", "ErrorEvent", "FileReader", "MessageEvent", "ProgressEvent", "WebSocket", "CloseEvent"]
